crates/service/tests/hover/snapshots/features__hover__func_as_block.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(func (result i64))\n```"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 7
    },
    "end": {
      "line": 3,
      "character": 8
    }
  }
}
