crates/service/tests/hover/snapshots/features__hover__func_ident_idx.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": [
    {
      "language": "wat",
      "value": "(func $func (param $param i32) (param f32) (param f64) (result i32) (result i64))"
    }
  ],
  "range": {
    "start": {
      "line": 3,
      "character": 14
    },
    "end": {
      "line": 3,
      "character": 19
    }
  }
}
