crates/service/tests/hover/snapshots/features__hover__func_import_int_idx.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(func (param $param i32) (param f32) (param f64) (result i32) (result i64))\n```"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 16
    },
    "end": {
      "line": 3,
      "character": 17
    }
  }
}
