crates/service/tests/hover/snapshots/features__hover__global_decl.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(global $global i64)\n```"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 12
    },
    "end": {
      "line": 2,
      "character": 19
    }
  }
}
