crates/service/tests/hover/snapshots/features__hover__global_ident_idx.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(global $global (mut i32))\n```"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 22
    },
    "end": {
      "line": 3,
      "character": 29
    }
  }
}
